<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>estudos-java</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>ContaBanco</module>
        <module>ProcessoSeletivo</module>
        <module>Desafio-Controle-Fluxe</module>
        <module>Lanchonete</module>
        <module>Escola</module>
        <module>Cadastro</module>
        <module>Brasil</module>
        <module>AppMSM</module>
        <module>Iphone</module>
        <module>ListaTarefa</module>
        <module>CarrinhoCompras</module>
        <module>CatalogoLivro</module>
        <module>OrdenacaoPessoas</module>
        <module>ConjuntoConvidados</module>
        <module>AgendaContato</module>
        <module>CadastroProduto</module>
        <module>AgendaContatoMap</module>
        <module>EstoqueProduto</module>
        <module>AgendaEventos</module>
        <module>Banco</module>
    </modules>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>22</source>
                    <target>22</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>